# Text-Speech

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  test.py
src/: speech_to_text.py  text_to_speech.py
src/Database/: __init__.py
src/Database/models/: __init__.py
src/repositories/: auth_repo.py  user_repo.py
src/routes/auth/: __init__.py
src/routes/user/: __init__.py
src/schema/: schemas.py  user_schema.py
src/security/: o_auth.py
src/services/: auth_service.py  user_service.py
src/utils/: hash_util.py  text_verification.py
